# lottery-analytics-dashboard

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  nginx.conf  pyproject.toml
.atl/: skill-registry.md
dashboard/: app.py  auth.py  data.py  db_local.py  rates.py  utils.py
dashboard/llm/: __init__.py  audit.py  cache.py  chat_assistant.py  context.py  executive_report.py  narrative.py  openrouter_client.py
dashboard/pages/: 01_📈_Performance.py  02_🔍_Anomalias.py  03_🏪_Agencias.py  04_🎰_Productos.py  05_💰_Riesgo.py  06_🌐_Proveedores.py  07_💬_Chat.py  08_📊_Reporte_Ejecutivo.py
docs/: DB_LOCAL_READONLY_GUIDE.md  OPERACIONES.md  RELEASE_CHECKLIST.md  experiencia-profesional.md  propuesta-data-analysis.md
docs/premier-plus-skills/: Changelog.md  SKILL.md
docs/premier-plus-skills/references/: 01-arquitectura-general.md  02-tickets-ciclo-de-vida.md  03-external-providers.md  04-providers-individuales.md  05-anulaciones-y-reversos.md  06-resultados-y-sorteos.md  07-wallet-y-transacciones.md  08-usuarios-y-autenticacion.md  09-ventas-y-reportes.md  10-sistema-y-configuracion.md
etl/: config.py  logger.py
etl/extractors/: aggregated.py  dimensions.py  facts.py  providers.py
ml/: __init__.py  config.py  features.py  io.py  run_all.py  schemas.py  train_anomaly.py  train_basket.py  train_churn.py  train_clustering.py  train_forecast.py
